# smartmeetingroom_AhmadElJazaerli_LaylaMonzer

./: .coverage  .env  .env.example  Makefile  PART2_IMPLEMENTATION.md  README.md  db_password.txt  docker-compose.yml  jwt_secret.txt  prometheus.yml  pyproject.toml  test.db
analytics_service/: requirements.txt
analytics_service/app/: config.py  deps.py  main.py
bookings_service/: test_bookings.db
bookings_service/app/: auth.py  config.py  main.py  models.py  schemas.py
bookings_service/tests/: test_bookings_api.py
common/: __init__.py  auth.py  cache.py  config.py  database.py  dependencies.py  logging_middleware.py  models.py  rate_limit.py  schemas.py
docs/source/: api.rst  conf.py  index.rst  overview.rst
grafana/dashboards/: business-analytics.json  system-overview.json
nginx/: nginx.conf
postman/: Smart Meeting Room - Bookings Service.postman_collection.json  Smart Meeting Room - Reviews Service.postman_collection.json  Smart Meeting Room - Rooms Service.postman_collection.json  Smart Meeting Room - Users Service.postman_collection.json  SmartMeetingRoom.postman_collection.json
reviews_service/: requirements.txt  test_reviews.db
rooms_service/: requirements.txt  test_rooms.db
scripts/: add_indexes.py  check_indexes.py
services/rooms/: app.py  (+1 more)
smartmeetingroom_leilamounzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
smartmeetingroom_leilamounzer_ahmadeljazaerli.egg-info/: PKG-INFO  requires.txt
tests/: TESTING.md  conftest.py  test_bookings.py  test_reviews.py  test_rooms.py  test_users.py
users_service/: requirements.txt  test.db
(+37 files in other folders)
